--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ rvm:
   - jruby-head
   - rbx-2
   - ruby-head
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/9ca8d56f4d3a17425b18
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
