--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ rvm:
   - jruby-head
   - rbx-2
   - ruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
 notifications:
   webhooks:
     urls:
