--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ rvm:
   - ruby-head
 matrix:
   allow_failures:
-    - rvm: ruby-head
+    - rvm:
+      - jruby-head
+      - ruby-head
 notifications:
   webhooks:
     urls:
