Drop ruby 2.1 add in 2.5 jruby stable
Tidied up the failing rubies as were not going to add support back in

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,22 +3,18 @@ script: 'script/ci'
 sudo: false
 
 rvm:
-  - 2.1
   - 2.2
   - 2.3
   - 2.4
-  - jruby-head
-  - rbx-2
-  - ruby-head
-
-cache:
-  - bundler
+  - 2.5
+  - jruby
 
 matrix:
   allow_failures:
-    - rvm: jruby-head
-    - rvm: rbx-2
-    - rvm: ruby-head
+- rvm: jruby
+
+cache:
+  - bundler
 
 before_install:
   - rvm get latest
