--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - uses: ruby/setup-ruby@v1
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       
       - name: Run script/ci
-      - run: 'script/ci'
+        run: 'script/ci'
       
       - name: Run tests
-      - run: bundle exec rake
+        run: bundle exec rake
